[package]
name = "near-api-rs"
authors = ["Russell Wong"]
version = "0.1.0"
edition = "2021"


[dependencies]
borsh = "0.9"
ed25519-dalek = "1.0"
async-trait = "0.1"
hashbrown = {version = "0.12", features=["serde"]}
js-sys ="0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
 version = "0.3"
 features = ["Window","Storage"]