[package]
name = "near-api-rs"
authors = ["Russell Wong"]
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
borsh = "0.9"
bs58 = "0.4"
hashbrown = {version = "0.12", features=["serde"]}
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
async-trait = "0.1"

near-account-id = { git = "https://github.com/russellwmy/nearcore.git" }
near-jsonrpc-primitives-wasm = { path = "./jsonrpc-primitives" }
near-crypto = { git = "https://github.com/russellwmy/nearcore.git", default-features = false }
near-primitives = { git = "https://github.com/russellwmy/nearcore.git", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "Storage",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window"
]
