[package]
name = "near-jsonrpc-primitives-wasm"
version = "0.0.0"
authors = ["Russell Wong"]
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.58.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/russellwmy/near-api-rs"
description = "This crate hosts structures for the NEAR JSON RPC Requests, Responses and Error types"

[dependencies]
once_cell = { version = "1.5.2"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1.13"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

near-primitives-core = "0.12"
near-crypto = { git = "https://github.com/russellwmy/nearcore.git", default-features = false }
near-primitives = { git = "https://github.com/russellwmy/nearcore.git", default-features = false }

[features]
test_features = []